--- a/index.html
+++ b/index.html
@@ -3,9 +3,27 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Hello Front-End</title>
+  <link type='text/css' rel="stylesheet" href="css/todo.css">
+  <title>To Do List</title>
 </head>
-<body>
-  <h1>Hello Front-End</h1>
-</body>
-</html>
+	<body>
+	  <h1>Chase's To Do List</h1>
+	<div >
+		<ul class="container">
+			<li>Clean my Room <span>X</span></li>
+			<li>Take out Trash <span>X</span></li>
+			<li>Fix the Sink <span>X</span></li>
+		</ul>
+	</div>
+	
+	<div>
+		<form action="#" method="GET">
+	  	<label for="foobox">Add New Task</label> <br></br> <input type="text" id="foobox"></input>
+	  	<button id="button" type="button">Add To List</button>
+	</div>
+
+	
+	  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.3/jquery.min.js"></script>
+	  <script type='text/javascript' src="js/todo.js"  defer></script>
+	</body>
+	</html>
