--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 	  <h1>Chase's To Do List</h1>
 	<div >
 		<ul class="container">
-			<li>Clean my Room <span>X</span></li>
-			<li>Take out Trash <span>X</span></li>
-			<li>Fix the Sink <span>X</span></li>
+			<li>Clean my Room </li>
+			<li>Take out Trash </li>
+			<li>Fix the Sink </li>
 		</ul>
 	</div>
 	
